--- a/src/Weather.css
+++ b/src/Weather.css
@@ -29,6 +29,11 @@ margin: 20px 0 0 0;
     margin-right: 10px;
     margin-bottom: 35px;
 }
+.Weather.canvas {
+    margin-right: 10px;
+    margin-top: 10px;
+    display: inline-block;
+}
 .Weather .temperature {
     font-weight: bold;
     color: rgb(33, 33, 33);
