--- a/src/Weather.css
+++ b/src/Weather.css
@@ -22,21 +22,17 @@ margin: 20px 0 0 0;
 .Weather form {
     margin-bottom: 20px;
 }
-.Weather img {
-    height: 64px;
-    width: 64px;
+.Weather canvas {
+    
     display: inline-block;
     margin-right: 10px;
-    margin-bottom: 35px;
+    margin-top: 5px;
+    margin-bottom: -10px;
 }
-.Weather.canvas {
-    margin-right: 10px;
-    margin-top: 10px;
-    display: inline-block;
-}
+
 .Weather .temperature {
     font-weight: bold;
-    color: rgb(33, 33, 33);
+    color: rgb(241, 241, 18);
     font-size: 64px;
     font-weight: 400;
     line-height: 64px;
